# quicknote

./: AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env_example  pyproject.toml  pytest.ini  requirements.txt
.agent/rules/: architecture.md  interactors.md  tests.md
.github/workflows/: test.yml
brain/: log.py
brain/application/: types.py
brain/application/abstractions/: token_verifier.py
brain/application/interactors/: AGENTS.md  __init__.py  factory.py
brain/application/services/: keyword_notes.py  note_keyword_sync.py  note_titles.py
brain/config/: models.py  parser.py  provider.py
brain/domain/: exceptions.py  value_objects.py
brain/domain/entities/: __init__.py  connection.py  graph.py  jwt.py  keyword.py  note.py  note_keyword.py  s3_file.py  tg_bot_auth.py  user.py
brain/domain/services/: __init__.py  diffs.py  keywords.py  media.py  notes.py  wikilinks.py
quicknote/: __main__.py  app.py  config.py  ioc.py  log.py
quicknote/config/: models.py  provider.py
tests/: AGENTS.md  conftest.py  test_find_note_endpoint.py  test_upload_endpoint.py
tests/fixtures/: bot_provider.py  db_provider.py  graph_provider.py  profile_picture_provider.py  profile_picture_storage_provider.py  repositories.py
tests/integration/: conftest.py  test_auth_interactor.py  test_graph_interactor.py  test_keyword_cleanup.py  test_note_graph.py  test_note_interactor.py  test_user_interactor.py  test_wikilink_suggestions.py
tests/mocks/: bot.py  config.py  notes_graph_repo.py
tests/unit/: test_update_note.py
(+263 files in other folders)
