[project]
name = "brain-backend"
version = "0.1.0"
description = "Graph-based notes backend"
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [{ name = "Billy" }]
dependencies = [
    "pytest",
    "pytest-freezegun",
    "PyJWT",
    "aiogram==3.10.0",
    "aiogram-dialog==2.1.0",
    "dishka",
    "testcontainers",
    "alembic",
    "fastapi==0.115.4",
    "python-dotenv",
    "uvicorn",
    "pydantic",
    "starlette",
    "SQLAlchemy",
    "adaptix",
    "redis==5.0.8",
    "asyncpg==0.29.0",
    "neo4j",
    "pytest-asyncio",
    "pytest-cov",
    "python-multipart",
    "boto3",
    "types-boto3[s3]",
    "diff-match-patch",
    "taskiq",
    "taskiq-redis",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["brain*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
